2007-02-21  Vincent Untz  <vuntz@gnome.org>

	* clock.c: (get_updated_timeformat): copied from update_timeformat(),
	but contains code to add gravity around the time
	(update_timeformat): call get_updated_timeformat() twice: once to get
	the format with the markup, and once to get a fallback format without
	markup
	(update_clock): changed the logic a bit, so that we can use pango
	markup, and make sure that we display something if the markup is not
	correct
	(destroy_clock): updated
	(clock_update_text_gravity): new, set the gravity of the label for
	vertical text!
	(force_no_focus_padding): updated, and call
	clock_update_text_gravity() and connect to the screen-changed signal
	to call it again
	Fix bug #409127.
	And, although this is not the goal of this commit, this fixes bug
	#332737.

==================== 2.17.91 ====================

==================== 2.17.90 ====================

2007-01-17  Vincent Untz  <vuntz@gnome.org>

	* calendar-client.c: (get_ical_url): kill
	(calendar_task_equal):
	(calendar_task_copy):
	(calendar_task_finalize):
	(calendar_task_init): remove URL stuff
	* clock.c: (clock_launch_evolution): new, to launch evolution with an
	argument
	(handle_tasks_changed):
	(create_task_list): remove URL stuff
	(task_activated_cb): launch evolution with the task uid
	(calendar_day_activated): updated to use clock_launch_evolution()
	Based on patch by Nickolay V. Shmyrev <nshmyrev@yandex.ru>
	Fix bug #162305

2007-01-17  Vincent Untz  <vuntz@gnome.org>

	* clock.c: add ifdef for langinfo.h
	(clock_locale_format): add ifdef for nl_langinfo
	Fix bug #394893

2007-01-17  Vincent Untz  <vuntz@gnome.org>

	* calendar-client.c: (calendar_client_foreach_appointment_day): don't
	mark multiple days on the calendar if the event is an all day meeting.
	Fix bug #382754

2007-01-17  Vincent Untz  <vuntz@gnome.org>

	* calendar-client.c: (calendar_client_foreach_appointment_day): make
	sure that the last day of a multi-day events is marked.
	Fix bug #305022